criando as grades do jogo

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
-        <div class="jogo"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
+        <div class="linha"></div>
     </div>
     <div class="mensagem">
-        <p></p>
-        <button></button>
+        <p>Vitória X</p>
+        <button>Reiniciar</button>
     </div>
 
 
