Adicionando o X e o O ao jogo da velha

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="linha"></div>
-        <div class="linha"></div>
+        <div class="linha x"></div>
+        <div class="linha circulo"></div>
         <div class="linha"></div>
         <div class="linha"></div>
         <div class="linha"></div>
