--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteiner">
+    <div class="conteiner circulo">
         <div class="linha x"></div>
         <div class="linha circulo"></div>
         <div class="linha"></div>
