Estilizando a mensagem de vitória e o botão de reiniciar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="linha"></div>
     </div>
     <div class="mensagem">
-        <p>Vitória X</p>
-        <button>Reiniciar</button>
+        <p class="msg_Txt">Vitória X</p>
+        <button class="btn">Reiniciar</button>
     </div>
 
 
