adicionando o x e o circulo, mudando os turnos deles em Js

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteiner circulo">
-        <div class="linha x"></div>
-        <div class="linha circulo"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
-        <div class="linha"></div>
+    <div class="conteiner x" data-linha>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
+        <div class="linha" data-linha></div>
     </div>
     <div class="mensagem">
         <p class="msg_Txt">Vitória X</p>
