--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteiner x" data-linha>
+    <div class="conteiner" data-conteiner>
         <div class="linha" data-linha></div>
         <div class="linha" data-linha></div>
         <div class="linha" data-linha></div>
