arrumando o bug de sumir o 'O' e ficar só o X

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="conteiner" data-conteiner>
+    <div class="conteiner " data-conteiner>
         <div class="linha" data-linha></div>
         <div class="linha" data-linha></div>
         <div class="linha" data-linha></div>
@@ -28,3 +28,12 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+const checandoVitoria = (jogadorAtual) => {
+    return combinacaoDeVitoria.some((combinacao) =>{
+        return combinacao.every(index => {
+            return 
+        })
+    })
+}
