colocando mensagem de vitória ou empate

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="linha" data-linha></div>
         <div class="linha" data-linha></div>
     </div>
-    <div class="mensagem">
-        <p class="msg_Txt">Vitória X</p>
+    <div class="mensagem" data-mensagem>
+        <p class="msg_Txt" data-mensagem-txt >Vitória X</p>
         <button class="btn">Reiniciar</button>
     </div>
 
@@ -28,12 +28,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-const checandoVitoria = (jogadorAtual) => {
-    return combinacaoDeVitoria.some((combinacao) =>{
-        return combinacao.every(index => {
-            return 
-        })
-    })
-}
