criando o reinicio do jogo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="mensagem" data-mensagem>
         <p class="msg_Txt" data-mensagem-txt >Vitória X</p>
-        <button class="btn">Reiniciar</button>
+        <button class="btn" data-btn>Reiniciar</button>
     </div>
 
 
